12-10-08: #1035, add preferred fonts for Chinese-Taiwan (tc), identical to Chinese (zh)
12-10-08: #1030, JARLauncher makes bad assumptions about properties file
12-10-08: #993 (reopened), disabling tracking or updates causes tabs to be hidden in Preferences dialog
12-10-08: #1026, create $HOME/.phet if needed when incrementing session count
12-10-08: #1027, create abstractions for $HOME/.phet and files in that dir
12-03-08: #920, add "mac-osx-quit" tracking message
12-03-08: #920, implement quit handler for Mac OS X
12-03-08: #920, add Apple contrib code (OSXAdapter)
12-03-08: #1001, update-now-pressed is sent whenever update dialog is opened
12-02-08: cleanup and generalize ILogger hierarchy
12-01-08: #945, generalized error dialogs
11-24-08: #926, integrated threaded downloading & progress bar into SimUpdater
11-21-08: #926, add DownloadProgressDialog
11-21-08: add MaxCharsLabel, a specialized JLabel that displays a max number of chars
11-21-08: add SwingUtils.setPreferredWidth, setPreferredHeight
11-21-08: add SwingUtils.centerDialog
11-21-08: #926, add DownloadThread util class
11-14-08: add StringUtil.stackTraceToString
11-14-08: move contents of package phetcommon.util.testing into phetcommon.tests.util
11-14-08: move dialogs that aren't part of a specific feature to new phetcommon.dialogs package
11-14-08: #957, check write permissions before attempting to perform update
11-11-08: cleanup UpdateManager.Listener hierarchy, rename interface, rename methods to be consistent with terminology used elsewhere, add adapter
11-11-08: collapse ApplicationConfigManualCheckForUpdates into DefaultManualUpdateChecker, ISimInfo arg makes this subclass unnecessary
11-11-08: use consistent naming in IManualUpdateChecker hierarchy, move interface to updates package
11-11-08: move OpenWebPageToNewVersion into PhetServiceManager, which already handles opening browser to PhET website pages
11-11-08: see #924, "Update Now" button needs to do something different for online sims