@@ -1,3 +1,4 @@
+12-15-08: #1032, validate JAR files downloaded by SimUpdater
 12-10-08: #1035, add preferred fonts for Chinese-Taiwan (tc), identical to Chinese (zh)
 12-10-08: #1030, JARLauncher makes bad assumptions about properties file
 12-10-08: #993 (reopened), disabling tracking or updates causes tabs to be hidden in Preferences dialog
